@@ -9,12 +9,16 @@
   "issues_url": "https://github.com/rharrison10/puppet-holland/issues",
   "dependencies": [
     {
+      "name": "puppetlabs/augeas_core",
+      "version_requirement": ">= 1.0.0 < 2.0.0"
+    },
+    {
       "name": "puppetlabs/stdlib",
       "version_requirement": ">= 5.0.0 < 6.0.0"
     },
     {
-      "name": "puppetlabs/augeas_core",
-      "version_requirement": ">= 1.0.0 < 2.0.0"
+      "name": "puppetlabs/mysql",
+      "version_requirement": ">= 6.0.0 < 11.0.0"
     }
   ],
   "operatingsystem_support": [
