@@ -1,7 +1,8 @@
-2019-08-26  Russell Harrison  <rharrison@fedoraproject.org> - 1.1.0
+2019-09-04  Russell Harrison  <rharrison@fedoraproject.org> - 1.1.0
   * Update to the latest Puppet PDK
   * Enable resource coverage reports
   * Start unit testing resources
+  * Cleanup metadata
 
 2019-08-09  Brian Wolford <bw@patientpay.com> - 1.1.0
   * Add support for after-backup-command, before-backup-command and
